# Freq-based-multiband-adaptive-Compression

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mbdr/: filterbank.py  mbdr.py  utils.py
tests/: test_compression.py  test_filterbanks.py  test_utils.py
